src/main/gen/com/javampire/openscad/parser/OpenSCADParser.java
// This is a generated file. Not intended for manual editing.
package com.javampire.openscad.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.javampire.openscad.psi.OpenSCADTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class OpenSCADParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ABS_EXPR) {
      r = abs_expr(b, 0);
    }
    else if (t == ACOS_EXPR) {
      r = acos_expr(b, 0);
    }
    else if (t == ARG_ASSIGNMENT) {
      r = arg_assignment(b, 0);
    }
    else if (t == ARG_ASSIGNMENT_LIST) {
      r = arg_assignment_list(b, 0);
    }
    else if (t == ARG_DECLARATION) {
      r = arg_declaration(b, 0);
    }
    else if (t == ARG_DECLARATION_LIST) {
      r = arg_declaration_list(b, 0);
    }
    else if (t == ASIN_EXPR) {
      r = asin_expr(b, 0);
    }
    else if (t == ASSERT_OBJ) {
      r = assert_obj(b, 0);
    }
    else if (t == ASSIGN_OP) {
      r = assign_op(b, 0);
    }
    else if (t == ASSIGNMENT) {
      r = assignment(b, 0);
    }
    else if (t == ATAN_2_EXPR) {
      r = atan2_expr(b, 0);
    }
    else if (t == ATAN_EXPR) {
      r = atan_expr(b, 0);
    }
    else if (t == BACKGROUND_OP) {
      r = background_op(b, 0);
    }
    else if (t == BLOCK_OBJ) {
      r = block_obj(b, 0);
    }
    else if (t == BUILTIN_OBJ) {
      r = builtin_obj(b, 0);
    }
    else if (t == BUILTIN_OP) {
      r = builtin_op(b, 0);
    }
    else if (t == CEIL_EXPR) {
      r = ceil_expr(b, 0);
    }
    else if (t == CHILD_OBJ) {
      r = child_obj(b, 0);
    }
    else if (t == CHILDREN_OBJ) {
      r = children_obj(b, 0);
    }
    else if (t == CHR_EXPR) {
      r = chr_expr(b, 0);
    }
    else if (t == CIRCLE_OBJ) {
      r = circle_obj(b, 0);
    }
    else if (t == COLOR_OP) {
      r = color_op(b, 0);
    }
    else if (t == CONCAT_EXPR) {
      r = concat_expr(b, 0);
    }
    else if (t == COS_EXPR) {
      r = cos_expr(b, 0);
    }
    else if (t == CROSS_EXPR) {
      r = cross_expr(b, 0);
    }
    else if (t == CUBE_OBJ) {
      r = cube_obj(b, 0);
    }
    else if (t == CYLINDER_OBJ) {
      r = cylinder_obj(b, 0);
    }
    else if (t == DEBUG_OP) {
      r = debug_op(b, 0);
    }
    else if (t == DIFFERENCE_OP) {
      r = difference_op(b, 0);
    }
    else if (t == DISABLE_OP) {
      r = disable_op(b, 0);
    }
    else if (t == ECHO_OBJ) {
      r = echo_obj(b, 0);
    }
    else if (t == ELLIPSE_OBJ) {
      r = ellipse_obj(b, 0);
    }
    else if (t == ELSE_OP) {
      r = else_op(b, 0);
    }
    else if (t == EMPTY_OBJ) {
      r = empty_obj(b, 0);
    }
    else if (t == EXP_EXPR) {
      r = exp_expr(b, 0);
    }
    else if (t == EXPR) {
      r = expr(b, 0, -1);
    }
    else if (t == FLOOR_EXPR) {
      r = floor_expr(b, 0);
    }
    else if (t == FOR_ELEMENT) {
      r = for_element(b, 0);
    }
    else if (t == FOR_OP) {
      r = for_op(b, 0);
    }
    else if (t == FULL_ARG_DECLARATION) {
      r = full_arg_declaration(b, 0);
    }
    else if (t == FULL_ARG_DECLARATION_LIST) {
      r = full_arg_declaration_list(b, 0);
    }
    else if (t == FUNCTION_DECLARATION) {
      r = function_declaration(b, 0);
    }
    else if (t == HULL_OP) {
      r = hull_op(b, 0);
    }
    else if (t == IF_ELEMENT) {
      r = if_element(b, 0);
    }
    else if (t == IF_OP) {
      r = if_op(b, 0);
    }
    else if (t == IMPORT_DXF_OBJ) {
      r = import_dxf_obj(b, 0);
    }
    else if (t == IMPORT_OBJ) {
      r = import_obj(b, 0);
    }
    else if (t == IMPORT_STL_OBJ) {
      r = import_stl_obj(b, 0);
    }
    else if (t == INCLUDE_ITEM) {
      r = include_item(b, 0);
    }
    else if (t == INTERSECTION_FOR_OP) {
      r = intersection_for_op(b, 0);
    }
    else if (t == INTERSECTION_OP) {
      r = intersection_op(b, 0);
    }
    else if (t == LEN_EXPR) {
      r = len_expr(b, 0);
    }
    else if (t == LET_ELEMENT) {
      r = let_element(b, 0);
    }
    else if (t == LET_EXPR) {
      r = let_expr(b, 0);
    }
    else if (t == LET_OP) {
      r = let_op(b, 0);
    }
    else if (t == LINEAR_EXTRUDE_OP) {
      r = linear_extrude_op(b, 0);
    }
    else if (t == LN_EXPR) {
      r = ln_expr(b, 0);
    }
    else if (t == LOG_EXPR) {
      r = log_expr(b, 0);
    }
    else if (t == LOOKUP_EXPR) {
      r = lookup_expr(b, 0);
    }
    else if (t == MAX_EXPR) {
      r = max_expr(b, 0);
    }
    else if (t == MIN_EXPR) {
      r = min_expr(b, 0);
    }
    else if (t == MINKOWSKI_OP) {
      r = minkowski_op(b, 0);
    }
    else if (t == MIRROR_OP) {
      r = mirror_op(b, 0);
    }
    else if (t == MODIFIER_OP) {
      r = modifier_op(b, 0);
    }
    else if (t == MODULE_CALL_OBJ) {
      r = module_call_obj(b, 0);
    }
    else if (t == MODULE_CALL_OP) {
      r = module_call_op(b, 0);
    }
    else if (t == MODULE_DECLARATION) {
      r = module_declaration(b, 0);
    }
    else if (t == MODULE_OBJ_REFERENCE) {
      r = module_obj_reference(b, 0);
    }
    else if (t == MODULE_OP_REFERENCE) {
      r = module_op_reference(b, 0);
    }
    else if (t == MULTMATRIX_OP) {
      r = multmatrix_op(b, 0);
    }
    else if (t == NORM_EXPR) {
      r = norm_expr(b, 0);
    }
    else if (t == OBJECT) {
      r = object(b, 0);
    }
    else if (t == OFFSET_OP) {
      r = offset_op(b, 0);
    }
    else if (t == OPERATOR) {
      r = operator(b, 0);
    }
    else if (t == PARAMETER_REFERENCE) {
      r = parameter_reference(b, 0);
    }
    else if (t == PARENT_MODULE_EXPR) {
      r = parent_module_expr(b, 0);
    }
    else if (t == POLYGON_OBJ) {
      r = polygon_obj(b, 0);
    }
    else if (t == POLYHEDRON_OBJ) {
      r = polyhedron_obj(b, 0);
    }
    else if (t == POW_EXPR) {
      r = pow_expr(b, 0);
    }
    else if (t == PROJECTION_OBJ) {
      r = projection_obj(b, 0);
    }
    else if (t == RANDS_EXPR) {
      r = rands_expr(b, 0);
    }
    else if (t == RENDER_OP) {
      r = render_op(b, 0);
    }
    else if (t == RESIZE_OP) {
      r = resize_op(b, 0);
    }
    else if (t == ROOT_OP) {
      r = root_op(b, 0);
    }
    else if (t == ROTATE_EXTRUDE_OP) {
      r = rotate_extrude_op(b, 0);
    }
    else if (t == ROTATE_OP) {
      r = rotate_op(b, 0);
    }
    else if (t == ROUND_EXPR) {
      r = round_expr(b, 0);
    }
    else if (t == SCALE_OP) {
      r = scale_op(b, 0);
    }
    else if (t == SEARCH_EXPR) {
      r = search_expr(b, 0);
    }
    else if (t == SELECT_EXPR) {
      r = select_expr(b, 0);
    }
    else if (t == SIGN_EXPR) {
      r = sign_expr(b, 0);
    }
    else if (t == SIN_EXPR) {
      r = sin_expr(b, 0);
    }
    else if (t == SPHERE_OBJ) {
      r = sphere_obj(b, 0);
    }
    else if (t == SQRT_EXPR) {
      r = sqrt_expr(b, 0);
    }
    else if (t == SQUARE_OBJ) {
      r = square_obj(b, 0);
    }
    else if (t == STR_EXPR) {
      r = str_expr(b, 0);
    }
    else if (t == SURFACE_OBJ) {
      r = surface_obj(b, 0);
    }
    else if (t == TAN_EXPR) {
      r = tan_expr(b, 0);
    }
    else if (t == TEXT_OBJ) {
      r = text_obj(b, 0);
    }
    else if (t == TRANSLATE_OP) {
      r = translate_op(b, 0);
    }
    else if (t == UNION_OP) {
      r = union_op(b, 0);
    }
    else if (t == USE_ITEM) {
      r = use_item(b, 0);
    }
    else if (t == VARIABLE_DECLARATION) {
      r = variable_declaration(b, 0);
    }
    else if (t == VERSION_EXPR) {
      r = version_expr(b, 0);
    }
    else if (t == VERSION_NUM_EXPR) {
      r = version_num_expr(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return openSCADFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ASSERT_OBJ, BLOCK_OBJ, BUILTIN_OBJ, CHILDREN_OBJ,
      CHILD_OBJ, CIRCLE_OBJ, CUBE_OBJ, CYLINDER_OBJ,
      ECHO_OBJ, ELLIPSE_OBJ, EMPTY_OBJ, IMPORT_DXF_OBJ,
      IMPORT_OBJ, IMPORT_STL_OBJ, MODULE_CALL_OBJ, OBJECT,
      POLYGON_OBJ, POLYHEDRON_OBJ, PROJECTION_OBJ, SPHERE_OBJ,
      SQUARE_OBJ, SURFACE_OBJ, TEXT_OBJ),
    create_token_set_(ASSIGN_OP, BACKGROUND_OP, BUILTIN_OP, COLOR_OP,
      DEBUG_OP, DIFFERENCE_OP, DISABLE_OP, ELSE_OP,
      FOR_OP, HULL_OP, IF_OP, INTERSECTION_FOR_OP,
      INTERSECTION_OP, LET_OP, LINEAR_EXTRUDE_OP, MINKOWSKI_OP,
      MIRROR_OP, MODIFIER_OP, MODULE_CALL_OP, MULTMATRIX_OP,
      OFFSET_OP, OPERATOR, RENDER_OP, RESIZE_OP,
      ROOT_OP, ROTATE_EXTRUDE_OP, ROTATE_OP, SCALE_OP,
      TRANSLATE_OP, UNION_OP),
    create_token_set_(ABS_EXPR, ACOS_EXPR, AND_EXPR, ASIN_EXPR,
      ATAN_2_EXPR, ATAN_EXPR, BUILTIN_EXPR, CALL_EXPR,
      CEIL_EXPR, CHR_EXPR, CONCAT_EXPR, CONDITIONAL_EXPR,
      COS_EXPR, CROSS_EXPR, DIV_EXPR, ELVIS_EXPR,
      EXPR, EXP_EXPR, FLOOR_EXPR, INDEX_EXPR,
      LEN_EXPR, LET_EXPR, LIST_COMPREHENSION_EXPR, LITERAL_EXPR,
      LN_EXPR, LOG_EXPR, LOOKUP_EXPR, MAX_EXPR,
      MINUS_EXPR, MIN_EXPR, MODULO_EXPR, MUL_EXPR,
      NORM_EXPR, OR_EXPR, PARENT_MODULE_EXPR, PAREN_EXPR,
      PLUS_EXPR, POW_EXPR, RANDS_EXPR, RANGE_EXPR,
      REF_EXPR, ROUND_EXPR, SEARCH_EXPR, SELECT_EXPR,
      SIGN_EXPR, SIN_EXPR, SQRT_EXPR, STR_EXPR,
      TAN_EXPR, UNARY_MIN_EXPR, UNARY_NEGATE_EXPR, UNARY_PLUS_EXPR,
      VECTOR_EXPR, VERSION_EXPR, VERSION_NUM_EXPR),
  };

  /* ********************************************************** */
  // ABS_KEYWORD arg_assignment_list
  public static boolean abs_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abs_expr")) return false;
    if (!nextTokenIs(b, ABS_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ABS_KEYWORD);
    r = r && arg_assignment_list(b, l + 1);
    exit_section_(b, m, ABS_EXPR, r);
    return r;
  }

  /* ********************************************************** */
  // ACOS_KEYWORD arg_assignment_list
  public static boolean acos_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "acos_expr")) return false;
    if (!nextTokenIs(b, ACOS_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ACOS_KEYWORD);
    r = r && arg_assignment_list(b, l + 1);
    exit_section_(b, m, ACOS_EXPR, r);
    return r;
  }

  /* ********************************************************** */
  // [ parameter_reference EQUALS ] expr
  public static boolean arg_assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG_ASSIGNMENT, "<arg assignment>");
    r = arg_assignment_0(b, l + 1);
    r = r && expr(b, l + 1, -1);
    exit_section_(b, l, m, r, false, recover_arg_parser_);
    return r;
  }

  // [ parameter_reference EQUALS ]
  private static boolean arg_assignment_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_0")) return false;
    arg_assignment_0_0(b, l + 1);
    return true;
  }

  // parameter_reference EQUALS
  private static boolean arg_assignment_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parameter_reference(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LPARENTH arg_assignment? ( COMMA+ arg_assignment )* RPARENTH
  public static boolean arg_assignment_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list")) return false;
    if (!nextTokenIs(b, LPARENTH)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARG_ASSIGNMENT_LIST, null);
    r = consumeToken(b, LPARENTH);
    p = r; // pin = 1
    r = r && report_error_(b, arg_assignment_list_1(b, l + 1));
    r = p && report_error_(b, arg_assignment_list_2(b, l + 1)) && r;
    r = p && consumeToken(b, RPARENTH) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // arg_assignment?
  private static boolean arg_assignment_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list_1")) return false;
    arg_assignment(b, l + 1);
    return true;
  }

  // ( COMMA+ arg_assignment )*
  private static boolean arg_assignment_list_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arg_assignment_list_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arg_assignment_list_2", c)) break;
    }
    return true;
  }

  // COMMA+ arg_assignment
  private static boolean arg_assignment_list_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list_2_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = arg_assignment_list_2_0_0(b, l + 1);
    p = r; // pin = 1
    r = r && arg_assignment(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // COMMA+
  private static boolean arg_assignment_list_2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_assignment_list_2_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, COMMA)) break;
      if (!empty_element_parsed_guard_(b, "arg_assignment_list_2_0_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER [EQUALS expr]
  public static boolean arg_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG_DECLARATION, "<arg declaration>");
    r = consumeToken(b, IDENTIFIER);
    r = r && arg_declaration_1(b, l + 1);
    exit_section_(b, l, m, r, false, recover_arg_parser_);
    return r;
  }

  // [EQUALS expr]
  private static boolean arg_declaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_1")) return false;
    arg_declaration_1_0(b, l + 1);
    return true;
  }

  // EQUALS expr
  private static boolean arg_declaration_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && expr(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LPARENTH arg_declaration? ( COMMA+ arg_declaration )* RPARENTH
  public static boolean arg_declaration_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_declaration_list")) return false;
    if (!nextTokenIs(b, LPARENTH)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARG_DECLARATION_LIST, null);
    r = consumeToken(b, LPARENTH);
    p = r; // pin = 1
    r = r && report_error_(b, arg_declaration_list_1(b, l + 1));
    r = p && report_error_(b, arg_declaration_list_2(b, l + 1)) && r;
    r = p && consumeToken(b, RPARENTH) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }
